tests/miniJava/neg/000317_mutation.MiniJava
class java { public static void Main ( length [ ] java ) { { } } }
